fix(car): additional field `location`
