# app/Http/Controllers/Api/CarController.php
@@ -49,6 +49,13 @@ class CarController extends Controller
    *         @OA\Examples(example="manual", value="manual", summary="car transmission (manual, automatic)"),
    *     ),
    *     @OA\Parameter(
+   *         description="Location of car",
+   *         in="query",
+   *         name="location",
+   *         @OA\Schema(type="string"),
+   *         @OA\Examples(example="south", value="south", summary="car location"),
+   *     ),
+   *     @OA\Parameter(
    *         description="Condition of car",
    *         in="query",
    *         name="condition",
@@ -131,6 +138,7 @@ class CarController extends Controller
     // $cars = Car::query()->with(['brand', 'type', 'user']);
     $name = $request->query('name');
     $transmission = $request->query('transmission');
+    $location = $request->query('location');
     $condition = $request->query('condition');
     $minPrice = $request->query('min_price'); // Mendapatkan harga minimum dari permintaan
     $maxPrice = $request->query('max_price'); // Mendapatkan harga maksimum dari permintaan
@@ -149,15 +157,19 @@ class CarController extends Controller
       ->leftJoin('wishlists as w', 'w.car_id', 'c.id');
 
     $cars->when($name, function (Builder $query) use ($name) {
-      return $query->whereRaw("c.name LIKE '%" . strtolower($name) . "%'");
+      return $query->whereRaw("LOWER(c.name) LIKE '%" . strtolower($name) . "%'");
     });
 
     $cars->when($transmission, function (Builder $query) use ($transmission) {
-      return $query->whereRaw("c.transmission LIKE '%" . strtolower($transmission) . "%'");
+      return $query->whereRaw("LOWER(c.transmission) LIKE '%" . strtolower($transmission) . "%'");
+    });
+
+    $cars->when($location, function (Builder $query) use ($location) {
+      return $query->whereRaw("LOWER(c.location) LIKE '%" . strtolower($location) . "%'");
     });
 
     $cars->when($condition, function (Builder $query) use ($condition) {
-      return $query->whereRaw("c.condition LIKE '%" . strtolower($condition) . "%'");
+      return $query->whereRaw("LOWER(c.condition) LIKE '%" . strtolower($condition) . "%'");
     });
 
     $cars->when($minKm, function (Builder $query) use ($minKm) {
@@ -205,6 +217,7 @@ class CarController extends Controller
       'c.description',
       'c.price',
       'c.transmission',
+      'c.location',
       'c.condition',
       'c.year',
       'c.km',
@@ -216,6 +229,209 @@ class CarController extends Controller
       'c.created_at',
       'c.updated_at',
       DB::raw('IF(w.car_id IS NOT NULL, 1, 0) as isWishList')
+    )->get());
+  }
+
+  /**
+   * Get all cars based on current logged seller
+   *
+   * @OA\Get(
+   *     path="/api/cars/based-on-seller",
+   *     tags={"cars"},
+   *     description="Get all cars based on current logged seller",
+   *     operationId="getCarsBasedOnSeller",
+   *     @OA\Parameter(
+   *         description="Name of car",
+   *         in="query",
+   *         name="name",
+   *         @OA\Schema(type="string"),
+   *         @OA\Examples(example="R34", value="R34", summary="car name"),
+   *     ),
+   *     @OA\Parameter(
+   *         description="Color of car",
+   *         in="query",
+   *         name="color",
+   *         @OA\Schema(type="string"),
+   *         @OA\Examples(example="white", value="white", summary="car color"),
+   *     ),
+   *     @OA\Parameter(
+   *         description="Transmission of car",
+   *         in="query",
+   *         name="transmission",
+   *         @OA\Schema(type="string"),
+   *         @OA\Examples(example="manual", value="manual", summary="car transmission (manual, automatic)"),
+   *     ),
+   *     @OA\Parameter(
+   *         description="Location of car",
+   *         in="query",
+   *         name="location",
+   *         @OA\Schema(type="string"),
+   *         @OA\Examples(example="south", value="south", summary="car location"),
+   *     ),
+   *     @OA\Parameter(
+   *         description="Condition of car",
+   *         in="query",
+   *         name="condition",
+   *         @OA\Schema(type="string"),
+   *         @OA\Examples(example="baru", value="baru", summary="car condition (baru, second)"),
+   *     ),
+   *     @OA\Parameter(
+   *         description="min_price of car",
+   *         in="query",
+   *         name="min_price",
+   *         @OA\Schema(type="integer"),
+   *         @OA\Examples(example="100000", value="100000", summary="car min_price"),
+   *     ),
+   *     @OA\Parameter(
+   *         description="max_price of car",
+   *         in="query",
+   *         name="max_price",
+   *         @OA\Schema(type="integer"),
+   *         @OA\Examples(example="100000", value="100000", summary="car max_price"),
+   *     ),
+   *     @OA\Parameter(
+   *         description="min_km of car",
+   *         in="query",
+   *         name="min_km",
+   *         @OA\Schema(type="integer"),
+   *         @OA\Examples(example="769", value="769", summary="car min_km"),
+   *     ),
+   *     @OA\Parameter(
+   *         description="max_km of car",
+   *         in="query",
+   *         name="max_km",
+   *         @OA\Schema(type="integer"),
+   *         @OA\Examples(example="769", value="769", summary="car max_km"),
+   *     ),
+   *     @OA\Parameter(
+   *         description="brand_name of car",
+   *         in="query",
+   *         name="brand_name",
+   *         @OA\Schema(type="string"),
+   *         @OA\Examples(example="gtr", value="gtr", summary="car brand_name"),
+   *     ),
+   *     @OA\Parameter(
+   *         description="type_name of car",
+   *         in="query",
+   *         name="type_name",
+   *         @OA\Schema(type="string"),
+   *         @OA\Examples(example="bensin", value="bensin", summary="car type_name"),
+   *     ),
+   *     @OA\Parameter(
+   *         description="user_name of car",
+   *         in="query",
+   *         name="user_name",
+   *         @OA\Schema(type="string"),
+   *         @OA\Examples(example="john", value="john", summary="car user_name"),
+   *     ),
+   *     @OA\Response(
+   *         response="200",
+   *         description="Successful get data cars",
+   *         @OA\JsonContent(
+   *             @OA\Property(
+   *                 property="status",
+   *                 type="integer",
+   *                 example="200",
+   *             ),
+   *             @OA\Property(
+   *                 property="message",
+   *                 type="string",
+   *                 example="ok",
+   *             ),
+   *             @OA\Property(
+   *                 property="data",
+   *                 type="object",
+   *             ),
+   *         )
+   *     )
+   * )
+   */
+  public function basedOnSeller(Request $request)
+  {
+    $name = $request->query('name');
+    $transmission = $request->query('transmission');
+    $location = $request->query('location');
+    $condition = $request->query('condition');
+    $minPrice = $request->query('min_price'); // Mendapatkan harga minimum dari permintaan
+    $maxPrice = $request->query('max_price'); // Mendapatkan harga maksimum dari permintaan
+    $minKm = $request->query('min_km'); // Mendapatkan jarak minimum dari permintaan
+    $maxKm = $request->query('max_km'); // Mendapatkan jarak maksimum dari permintaan
+    $minYear = $request->query('min_year'); // Mendapatkan jarak minimum dari permintaan
+    $maxYear = $request->query('max_year'); // Mendapatkan jarak maksimum dari permintaan
+    $brandName = $request->query('brand_name'); // Mendapatkan nama merek dari permintaan
+    $typeName = $request->query('type_name'); // Mendapatkan nama tipe dari permintaan
+
+    $cars = DB::table('cars as c')
+      ->join('brands as b', 'b.id', 'c.brand_id')
+      ->join('types as t', 't.id', 'c.type_id');
+
+    $cars->when($name, function (Builder $query) use ($name) {
+      return $query->whereRaw("LOWER(c.name) LIKE '%" . strtolower($name) . "%'");
+    });
+
+    $cars->when($transmission, function (Builder $query) use ($transmission) {
+      return $query->whereRaw("LOWER(c.transmission) LIKE '%" . strtolower($transmission) . "%'");
+    });
+
+    $cars->when($location, function (Builder $query) use ($location) {
+      return $query->whereRaw("LOWER(c.location) LIKE '%" . strtolower($location) . "%'");
+    });
+
+    $cars->when($condition, function (Builder $query) use ($condition) {
+      return $query->whereRaw("LOWER(c.condition) LIKE '%" . strtolower($condition) . "%'");
+    });
+
+    $cars->when($minKm, function (Builder $query) use ($minKm) {
+      return $query->where('c.km', '>=', $minKm);
+    });
+
+    $cars->when($maxKm, function (Builder $query) use ($maxKm) {
+      return $query->where('c.km', '<=', $maxKm);
+    });
+
+
+    $cars->when($minPrice, function (Builder $query) use ($minPrice) {
+      return $query->where('c.price', '>=', $minPrice);
+    });
+
+    $cars->when($maxPrice, function (Builder $query) use ($maxPrice) {
+      return $query->where('c.price', '<=', $maxPrice);
+    });
+
+    $cars->when($minYear, function (Builder $query) use ($minYear) {
+      return $query->where('c.year', '>=', $minYear);
+    });
+
+    $cars->when($maxYear, function (Builder $query) use ($maxYear) {
+      return $query->where('c.year', '<=', $maxYear);
+    });
+
+
+    $cars->when($brandName, function (Builder $query) use ($brandName) {
+      return $query->where('b.name', 'like', '%' . $brandName . '%');
+    });
+
+    $cars->when($typeName, function (Builder $query) use ($typeName) {
+      return $query->where('t.name', 'like', '%' . $typeName . '%');
+    });
+
+    return ApiHelper::sendResponse(data: $cars->where('c.user_id', auth()->user()->id)->select(
+      'c.id',
+      'c.name',
+      'c.color',
+      'c.description',
+      'c.price',
+      'c.transmission',
+      'c.location',
+      'c.condition',
+      'c.year',
+      'c.km',
+      'c.stock',
+      'c.image',
+      't.name as type_name',
+      'b.name as brand_name',
+      'c.created_at',
+      'c.updated_at',
     )->get());
   }
 
@@ -279,6 +495,7 @@ class CarController extends Controller
    *             @OA\Property(property="description", type="string"),
    *             @OA\Property(property="price", type="integer"),
    *             @OA\Property(property="transmission", type="string"),
+   *             @OA\Property(property="location", type="string"),
    *             @OA\Property(property="condition", type="string"),
    *             @OA\Property(property="year", type="integer"),
    *             @OA\Property(property="km", type="integer"),
@@ -302,6 +519,8 @@ class CarController extends Controller
    *                 @OA\Items(type="string", example="The price field is required")),
    *               @OA\Property(property="transmission", type="array",
    *                 @OA\Items(type="string", example="The transmission field is required")),
+   *               @OA\Property(property="location", type="array",
+   *                 @OA\Items(type="string", example="The location field is required")),
    *               @OA\Property(property="condition", type="array",
    *                 @OA\Items(type="string", example="The condition field is required")),
    *               @OA\Property(property="year", type="array",
@@ -344,13 +563,14 @@ class CarController extends Controller
   public function store(Request $request)
   {
     $validator = Validator::make($request->only([
-      'name', 'color', 'description', 'price', 'transmission', 'condition', 'year', 'km', 'stock', 'image', 'brand_id', 'type_id',
+      'name', 'color', 'description', 'price', 'transmission', 'location', 'condition', 'year', 'km', 'stock', 'image', 'brand_id', 'type_id',
     ]), [
       'name' => 'required',
       'color' => 'required',
       'description' => 'required',
       'price' => 'required|integer',
       'transmission' => 'required|in:automatic,manual',
+      'location' => 'required',
       'condition' => 'required|in:baru,bekas',
       'year' => 'required|integer',
       'km' => 'required|integer',
@@ -402,6 +622,7 @@ class CarController extends Controller
    *             @OA\Property(property="description", type="string"),
    *             @OA\Property(property="price", type="integer"),
    *             @OA\Property(property="transmission", type="string"),
+   *             @OA\Property(property="location", type="string"),
    *             @OA\Property(property="condition", type="string"),
    *             @OA\Property(property="year", type="integer"),
    *             @OA\Property(property="km", type="integer"),
@@ -427,6 +648,8 @@ class CarController extends Controller
    *                 @OA\Items(type="string", example="The price field is required")),
    *               @OA\Property(property="transmission", type="array",
    *                 @OA\Items(type="string", example="The transmission field is required")),
+   *               @OA\Property(property="location", type="array",
+   *                 @OA\Items(type="string", example="The location field is required")),
    *               @OA\Property(property="condition", type="array",
    *                 @OA\Items(type="string", example="The condition field is required")),
    *               @OA\Property(property="year", type="array",
@@ -469,13 +692,14 @@ class CarController extends Controller
   public function update(Car $car, Request $request)
   {
     $validator = Validator::make($request->only([
-      'name', 'color', 'description', 'price', 'transmission', 'condition', 'year', 'km', 'stock', 'image', 'brand_id', 'type_id',
+      'name', 'color', 'description', 'price', 'transmission', 'location', 'condition', 'year', 'km', 'stock', 'image', 'brand_id', 'type_id',
     ]), [
       'name' => 'sometimes|required',
       'color' => 'sometimes|required',
       'description' => 'sometimes|required',
       'price' => 'sometimes|required|integer',
       'transmission' => 'sometimes|required',
+      'location' => 'sometimes|required',
       'condition' => 'sometimes|required',
       'year' => 'sometimes|required|integer',
       'km' => 'sometimes|required|integer',
