# storage/api-docs/api-docs.json
@@ -502,6 +502,20 @@
                         }
                     },
                     {
+                        "name": "location",
+                        "in": "query",
+                        "description": "Location of car",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "south": {
+                                "summary": "car location",
+                                "value": "south"
+                            }
+                        }
+                    },
+                    {
                         "name": "condition",
                         "in": "query",
                         "description": "Condition of car",
@@ -665,6 +679,9 @@
                                     "transmission": {
                                         "type": "string"
                                     },
+                                    "location": {
+                                        "type": "string"
+                                    },
                                     "condition": {
                                         "type": "string"
                                     },
@@ -731,6 +748,13 @@
                                                     "items": {
                                                         "type": "string",
                                                         "example": "The transmission field is required"
+                                                    }
+                                                },
+                                                "location": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The location field is required"
                                                     }
                                                 },
                                                 "condition": {
@@ -820,6 +844,211 @@
                         "bearerAuth": []
                     }
                 ]
+            }
+        },
+        "/api/cars/based-on-seller": {
+            "get": {
+                "tags": [
+                    "cars"
+                ],
+                "summary": "Get all cars based on current logged seller",
+                "description": "Get all cars based on current logged seller",
+                "operationId": "getCarsBasedOnSeller",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "description": "Name of car",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "R34": {
+                                "summary": "car name",
+                                "value": "R34"
+                            }
+                        }
+                    },
+                    {
+                        "name": "color",
+                        "in": "query",
+                        "description": "Color of car",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "white": {
+                                "summary": "car color",
+                                "value": "white"
+                            }
+                        }
+                    },
+                    {
+                        "name": "transmission",
+                        "in": "query",
+                        "description": "Transmission of car",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "manual": {
+                                "summary": "car transmission (manual, automatic)",
+                                "value": "manual"
+                            }
+                        }
+                    },
+                    {
+                        "name": "location",
+                        "in": "query",
+                        "description": "Location of car",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "south": {
+                                "summary": "car location",
+                                "value": "south"
+                            }
+                        }
+                    },
+                    {
+                        "name": "condition",
+                        "in": "query",
+                        "description": "Condition of car",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "baru": {
+                                "summary": "car condition (baru, second)",
+                                "value": "baru"
+                            }
+                        }
+                    },
+                    {
+                        "name": "min_price",
+                        "in": "query",
+                        "description": "min_price of car",
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "examples": {
+                            "100000": {
+                                "summary": "car min_price",
+                                "value": "100000"
+                            }
+                        }
+                    },
+                    {
+                        "name": "max_price",
+                        "in": "query",
+                        "description": "max_price of car",
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "examples": {
+                            "100000": {
+                                "summary": "car max_price",
+                                "value": "100000"
+                            }
+                        }
+                    },
+                    {
+                        "name": "min_km",
+                        "in": "query",
+                        "description": "min_km of car",
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "examples": {
+                            "769": {
+                                "summary": "car min_km",
+                                "value": "769"
+                            }
+                        }
+                    },
+                    {
+                        "name": "max_km",
+                        "in": "query",
+                        "description": "max_km of car",
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "examples": {
+                            "769": {
+                                "summary": "car max_km",
+                                "value": "769"
+                            }
+                        }
+                    },
+                    {
+                        "name": "brand_name",
+                        "in": "query",
+                        "description": "brand_name of car",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "gtr": {
+                                "summary": "car brand_name",
+                                "value": "gtr"
+                            }
+                        }
+                    },
+                    {
+                        "name": "type_name",
+                        "in": "query",
+                        "description": "type_name of car",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "bensin": {
+                                "summary": "car type_name",
+                                "value": "bensin"
+                            }
+                        }
+                    },
+                    {
+                        "name": "user_name",
+                        "in": "query",
+                        "description": "user_name of car",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "john": {
+                                "summary": "car user_name",
+                                "value": "john"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful get data cars",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "integer",
+                                            "example": "200"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "ok"
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
             }
         },
         "/api/cars/{id}": {
@@ -918,6 +1147,9 @@
                                     "transmission": {
                                         "type": "string"
                                     },
+                                    "location": {
+                                        "type": "string"
+                                    },
                                     "condition": {
                                         "type": "string"
                                     },
@@ -991,6 +1223,13 @@
                                                     "items": {
                                                         "type": "string",
                                                         "example": "The transmission field is required"
+                                                    }
+                                                },
+                                                "location": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "string",
+                                                        "example": "The location field is required"
                                                     }
                                                 },
                                                 "condition": {
